--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="home-cols">
                 <!-- img Col -->
                 <div class="home-img-col">
-                    <img src="./portfolio image/be.png" alt="">
+                    <img src="./portfolio image/be (1).png" alt="">
                 </div>
                 <!-- Center Col -->
                 <div class="home-info-col">
