--- a/index.html
+++ b/index.html
@@ -2,16 +2,24 @@
 <html lang="en">
 
 <head>
+    <meta http-equiv="refresh" content="3;url=http://google.com/" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Personal Portfolio Website</title>
+    <title>Tastan / Portfolio </title>
     <link rel="stylesheet" href=".css">
-
+    <link rel="stylesheet" href="https://cdn.ayroui.com/1.0/css/bootstrap.min.css" />
+    <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.ayroui.com/1.0/css/starter.css" />
 </head>
 
 <body>
+    <!-- --------Loading-------- -->
+    <div class="center">
+        <div class="ring"></div>
+        <span class="spana">Please Wait...</span>
+    </div>
 
 
     <!-- === Home Section Start -->
@@ -26,8 +34,9 @@
                 </div>
                 <!-- Center Col -->
                 <div class="home-info-col">
-                    <h1>Hi, This Is <span>M Tastan. </span><br>A Front-End Developer</h1>
-                    <p>I'm a Web developer. I love to create beautiful and functional websites. </p>
+                    <h1>Hi, I'm <span>M. Tastan </span><br>A Front-End Developer</h1>
+                    <p>I'm a Web developer. I love to create beautiful and functional websites.Press the button below to
+                        learn more about me </p>
                     <a dowload="" href="./portfolio image/assets/Frontend Resume (Musa Taştan).docx">Download Cv <i
                             class="fa-solid fa-download"></i></a>
                 </div>
@@ -92,7 +101,7 @@
                         <p>Projects completed</p>
                     </div>
                     <div class="about-box">
-                        <h2>4+</h2>
+                        <h2>2+</h2>
                         <p>Years of experience</p>
                     </div>
                     <div class="about-box">
@@ -281,24 +290,36 @@
                 <div class="service-item">
                     <i class="fa-solid fa-code"></i>
                     <h2>Web Design</h2>
-                    <p>Lorem ipsum dolor sit elit. Quaerat non aut sapiente pariatur quia aperiam nobis doloribus
-                        suscipit ipsam quam.</p>
+                    <p>I am passionate about creating creative, aesthetic and user-friendly websites. I work diligently
+                        to understand my
+                        clients' needs, reflect their brand, and help them reach their target audience. I approach my
+                        work with a professional
+                        mindset while collaborating closely with my clients to achieve the best results.
+                    </p>
                 </div>
 
                 <!-- service 2 -->
                 <div class="service-item">
                     <i class="fa-solid fa-mobile-screen-button"></i>
                     <h2>Responsive Design</h2>
-                    <p>Lorem ipsum dolor sit elit. Quaerat non aut sapiente pariatur quia aperiam nobis doloribus
-                        suscipit ipsam quam.</p>
+                    <p>Responsive design ensures your website is displayed correctly on any device. This allows them to
+                        easily navigate, read
+                        and act on your content while using your site. In addition, search engines such as Google give
+                        priority to
+                        mobile-friendly websites and rank higher. Therefore, responsive design is an important factor in
+                        terms of both user
+                        experience and SEO. That's why I recommend responsive design to my clients.</p>
                 </div>
 
                 <!-- service 3 -->
                 <div class="service-item" id="service3">
                     <i class="fa-solid fa-palette"></i>
                     <h2>Graphic Design</h2>
-                    <p>Lorem ipsum dolor sit elit. Quaerat non aut sapiente pariatur quia aperiam nobis doloribus
-                        suscipit ipsam quam.</p>
+                    <p>I am passionate about creating attractive visual identities of businesses, products and services.
+                        While prioritizing
+                        user experience, I take a creative and functional approach to helping brands best communicate
+                        their message. I work
+                        closely with my clients, providing customized graphic designs to suit their needs and goals.</p>
                 </div>
 
             </div>
@@ -349,6 +370,14 @@
                         <input type="submit" value="Send Message">
                     </form>
                 </div>
+                <div class="social">
+                    <a href="https://www.linkedin.com/in/musatastan/" target="_blank">
+                        <i class="lni lni-linkedin-original"></i>
+                    </a>
+                    <a href="https://github.com/musa-gh" target="_blank">
+                        <i class="lni lni-github-original"></i>
+                    </a>
+                </div>
             </div>
     </section>
 
@@ -364,7 +393,8 @@
     <script src="script.js"></script>
     <!-- FontAwesome JS File (Icon File) -->
     <script src="https://kit.fontawesome.com/aa5f332820.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>;
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+
 
 </body>
 
